--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "yarn": "^1.13.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
+    "heroku-postbuild": "npm run build",
     "build": "react-scripts build",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
